syntax = "proto3";

package aspb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message AnimeEpisodeRequest {
    int64 seasonID = 1;
    uint32 episodeNumber = 2;
    string episode_original_title = 3;
    google.protobuf.Timestamp aired = 4;
    string rating = 5;
    google.protobuf.Duration duration = 6;
    string thumbnails = 7;
    string thumbnailsBlurHash = 8;
}

message AnimeEpisodeResponse {
    int64 ID = 1;
    int64 seasonID = 2;
    uint32 episodeNumber = 3;
    string episode_original_title = 4;
    google.protobuf.Timestamp aired = 5;
    string rating = 6;
    google.protobuf.Duration duration = 7;
    string thumbnails = 8;
    string thumbnailsBlurHash = 9;
    google.protobuf.Timestamp createdAt = 10;
}